// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchAvailableDawlets fetches available dawlets 1`] = `
Array [
  Object {
    "description": "Algolet lets you write your own custom logic to generate music.",
    "localizable": true,
    "name": "algolet",
  },
]
`;

exports[`fetchAvailableDawlets reads dawlets folder 1`] = `
Array [
  "algolet",
]
`;

exports[`retrieveDawletConfig gets dawlet config 1`] = `
Object {
  "description": "Algolet lets you write your own custom logic to generate music.",
  "localizable": true,
  "name": "algolet",
}
`;
